# MightyFields_Automation

./: README.md  pyproject.toml
core/: constants.py  dataclass.py  enums.py  init_driver.py  steps.py
core/page_object/: locator.py  page.py
tests/: conftest.py  test_create_task.py
